--- a/app/src/main/res/layout/step_personal_info.xml
+++ b/app/src/main/res/layout/step_personal_info.xml
@@ -1,115 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:layout_margin="@dimen/spacing_normal"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
-        app:cardCornerRadius="@dimen/spacing_half"
-        >
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/editName"
-                android:layout_margin="@dimen/spacing_half"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_step_personal_info_name"/>
-
-            <EditText
-                android:id="@+id/editConcept"
-                android:layout_margin="@dimen/spacing_half"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_step_personal_info_concept"/>
-
-            <EditText
-                android:id="@+id/editPlayer"
-                android:layout_margin="@dimen/spacing_half"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_step_personal_info_player"
-                android:text="@string/default_step_personal_info_player"/>
-
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_margin="@dimen/spacing_normal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
-        app:cardCornerRadius="@dimen/spacing_half"
-        >
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/spacing_normal"
+            android:background="@android:color/darker_gray"
+            app:cardCornerRadius="@dimen/spacing_half">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/spacing_normal"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <TextView
-                    android:text="@string/label_step_personal_info_virtue"
-                    android:layout_margin="@dimen/spacing_half"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <Spinner
-                    android:id="@+id/spinnerVirtue"
-                    android:layout_width="0dp"
+                <EditText
+                    android:id="@+id/editName"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/spacing_half"
-                    android:layout_weight="1"/>
+                    android:hint="@string/hint_step_personal_info_name" />
 
-                <Button
-                    android:id="@+id/btnAddVirtue"
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/editConcept"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/spacing_half"
-                    android:text="@string/button_add"/>
+                    android:hint="@string/hint_step_personal_info_concept" />
+
+                <EditText
+                    android:id="@+id/editPlayer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/spacing_half"
+                    android:hint="@string/hint_step_personal_info_player"
+                    android:text="@string/default_step_personal_info_player" />
+
             </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/spacing_normal"
+            android:background="@android:color/darker_gray"
+            app:cardCornerRadius="@dimen/spacing_half">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/spacing_normal"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <TextView
-                    android:text="@string/label_step_personal_info_vice"
-                    android:layout_margin="@dimen/spacing_half"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <Spinner
-                    android:id="@+id/spinnerVice"
-                    android:layout_width="0dp"
-                    android:layout_margin="@dimen/spacing_half"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
+                    android:layout_margin="@dimen/spacing_normal"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/btnAddVice"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/label_step_personal_info_virtue" />
+
+                    <Spinner
+                        android:id="@+id/spinnerVirtue"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/btnAddVirtue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/button_add" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/spacing_half"
-                    android:text="@string/button_add"/>
+                    android:layout_margin="@dimen/spacing_normal"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/label_step_personal_info_vice" />
+
+                    <Spinner
+                        android:id="@+id/spinnerVice"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/btnAddVice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/button_add" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/spacing_normal"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/label_step_personal_info_nature" />
+
+                    <Spinner
+                        android:id="@+id/spinnerNature"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/btnAddNature"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/button_add" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/spacing_normal"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/label_step_personal_info_demeanor" />
+
+                    <Spinner
+                        android:id="@+id/spinnerDemeanor"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/btnAddDemeanor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/button_add" />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+</ScrollView>
