--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="fab_accept_background">#00dd33</color>
     <color name="fab_reject_background">#dd0022</color>
+    <color name="text_hint">#969293</color>
 </resources>
