--- a/app/src/main/res/layout/step_personal_info.xml
+++ b/app/src/main/res/layout/step_personal_info.xml
@@ -84,7 +84,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
-                        android:text="@string/button_add" />
+                        android:text="@string/button_add"
+                        android:visibility="gone"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -112,7 +113,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
-                        android:text="@string/button_add" />
+                        android:text="@string/button_add"
+                        android:visibility="gone"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -140,7 +142,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
-                        android:text="@string/button_add" />
+                        android:text="@string/button_add"
+                        android:visibility="gone"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -168,7 +171,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
-                        android:text="@string/button_add" />
+                        android:text="@string/button_add"
+                        android:visibility="gone"/>
                 </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
