--- a/app/src/main/res/layout/fragment_list_characters.xml
+++ b/app/src/main/res/layout/fragment_list_characters.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.emi.nwodcombat.characterlist.CharacterListFragment">
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 tools:context="com.emi.nwodcombat.characterlist.CharacterListFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,14 +20,20 @@
             android:textColor="@color/text_hint"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
-
-        <android.support.v7.widget.RecyclerView
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/rvCharacters"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1" />-->
+        <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
             android:id="@+id/rvCharacters"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            app:rrvIsRefreshable="false"
+            app:rrvLayoutType="LinearLayout"/>
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
