--- a/app/src/main/res/layout/fragment_view_character.xml
+++ b/app/src/main/res/layout/fragment_view_character.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            tools:context="com.emi.nwodcombat.characterviewer.CharacterViewerFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,24 +22,41 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="MissingPrefix">
 
-                <EditText
-                    android:id="@+id/editName"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/spacing_half"
-                    android:hint="@string/hint_step_personal_info_name"/>
+                    android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/editConcept"
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/hint_step_personal_info_name"
+                        />
+                    <!--Note: Font names are CASE SENSITIVE. -->
+                    <!--fontPath="fonts/ViviDoC.TTF"-->
+
+                    <TextView
+                        android:id="@+id/txtCharacterName"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:hint="@string/hint_step_personal_info_name"/>
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/txtCharacterConcept"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/spacing_half"
                     android:hint="@string/hint_step_personal_info_concept"/>
 
-                <EditText
-                    android:id="@+id/editPlayer"
+                <TextView
+                    android:id="@+id/txtCharacterPlayer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/spacing_half"
