--- a/app/src/main/res/layout/fragment_view_character.xml
+++ b/app/src/main/res/layout/fragment_view_character.xml
@@ -45,24 +45,52 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
-                        android:layout_margin="@dimen/spacing_half"
-                        android:hint="@string/hint_step_personal_info_name"/>
+                        android:layout_margin="@dimen/spacing_half"/>
                 </LinearLayout>
-                <TextView
-                    android:id="@+id/txtCharacterConcept"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/spacing_half"
-                    android:hint="@string/hint_step_personal_info_concept"/>
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/txtCharacterPlayer"
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/hint_step_personal_info_concept"
+                        />
+                    <!--Note: Font names are CASE SENSITIVE. -->
+                    <!--fontPath="fonts/ViviDoC.TTF"-->
+
+                    <TextView
+                        android:id="@+id/txtCharacterConcept"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:layout_margin="@dimen/spacing_half"/>
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/spacing_half"
-                    android:hint="@string/hint_step_personal_info_player"
-                    android:text="@string/default_step_personal_info_player"/>
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/hint_step_personal_info_player"
+                        />
+                    <!--Note: Font names are CASE SENSITIVE. -->
+                    <!--fontPath="fonts/ViviDoC.TTF"-->
+
+                    <TextView
+                        android:id="@+id/txtCharacterPlayer"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:layout_margin="@dimen/spacing_half"/>
+                </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
