--- a/app/src/main/res/layout/fragment_view_character.xml
+++ b/app/src/main/res/layout/fragment_view_character.xml
@@ -155,17 +155,29 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/lblCharacterVice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
                         android:text="@string/label_step_personal_info_vice"/>
+
+                    <TextView
+                        android:id="@+id/txtCharacterVice"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/hint_tap_to_select"
+                        android:visibility="visible"
+                        />
 
                     <Spinner
                         android:id="@+id/spinnerVice"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:visibility="gone"/>
 
                     <Button
                         android:id="@+id/btnAddVice"
@@ -184,17 +196,29 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/lblCharacterNature"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
                         android:text="@string/label_step_personal_info_nature"/>
+
+                    <TextView
+                        android:id="@+id/txtCharacterNature"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/hint_tap_to_select"
+                        android:visibility="visible"
+                        />
 
                     <Spinner
                         android:id="@+id/spinnerNature"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:visibility="gone"/>
 
                     <Button
                         android:id="@+id/btnAddNature"
@@ -213,17 +237,29 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/lblCharacterDemeanor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
                         android:text="@string/label_step_personal_info_demeanor"/>
+
+                    <TextView
+                        android:id="@+id/txtCharacterDemeanor"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="@dimen/spacing_half"
+                        android:text="@string/hint_tap_to_select"
+                        android:visibility="visible"
+                        />
 
                     <Spinner
                         android:id="@+id/spinnerDemeanor"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_half"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:visibility="gone"/>
 
                     <Button
                         android:id="@+id/btnAddDemeanor"
