--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,7 +9,8 @@
         <attr name="combatantTag" format="string" />
     </declare-styleable>
     <declare-styleable name="ValueSetterWidget">
-        <attr name="valueName" format="string"/>
+        <attr name="pointCost" format="integer" />
+        <attr name="valueName" format="string" />
         <attr name="valueDefault" format="integer" />
         <attr name="valueMaximum" format="integer" />
         <attr name="traitCategory" format="string" />
